<resources>
    <string name="app_name">sahayam</string>
    <string name="title_activity_maps">Map</string>


        <string-array name="categories">
            <item>Daily Wage Labour</item>
            <item>Clerks</item>
            <item>Attenders</item>
            <item>Supervisors</item>
            <item>Accountants</item>
            <item>Construction</item>
            <item>Electrician</item>
            <item>Plumbers</item>
            <item>Mechanics</item>
            <item>Drivers</item>
            <item>Cleaners</item>
        </string-array>





    <string name="title_activity_navact">navact</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_ambulance">Map</string>
    <string name="username">Username</string>
    <string name="select_a_doctor">SELECT A DOCTOR</string>
    <string name="consumer">consumer</string>
    <string name="producer">producer</string>
    <string name="book_an_appointment">Book an appointment</string>
    <string name="clinical_speciality">Clinical Speciality</string>
    <string name="departments">Departments</string>
    <string name="employment">EMPLOYMENT</string>
    <string name="give_job">GIVE JOB</string>
    <string name="take_job">TAKE JOB</string>
    <string name="hospital_facilities">HOSPITAL FACILITIES</string>
    <string name="nagri_business">AGRI BUSINESS</string>
    <string name="nemployment">EMPLOYMENT</string>
    <string name="nsecurity">SECURITY</string>
    <string name="ncrop_guidance">CROP GUIDANCE</string>
    <string name="nupdate_number">UPDATE NUMBER</string>
    <string name="hospital_appointment">HOSPITAL APPOINTMENT</string>
    <string name="near_by_hospitals">NEAR BY HOSPITALS</string>
    <string name="tele_hospital">TELE HOSPITAL</string>
    <string name="ambulance_services">AMBULANCE SERVICES</string>
    <string name="nhospital_facilities_n">HOSPITAL FACILITIES</string>
    <string name="password">Password</string>
    <string name="sign_in1">Sign in</string>
    <string name="continuenow">continue</string>
    <string name="details">Details</string>
    <string name="create_account">Create Account</string>
    <string name="booking_details">Booking Details</string>
    <string name="confirm_booking">CONFIRM BOOKING</string>
    <string name="select_a_day">SELECT A DAY</string>
    <string name="update_emergency_number">Update Emergency Number</string>
    <string name="emergency_number">Emergency Number</string>
    <string name="confirm_number">Confirm number</string>
    <string name="update">Update</string>
    <string name="_10">10</string>
    <string name="test_upi_payment">Test UPI Payment</string>
    <string name="pay_now">Pay Now</string>
    <string name="verification">Verification</string>
    <string name="verify">verify</string>
    <string name="title_of_job">Title of Job</string>
    <string name="subject">Subject</string>


</resources>

