<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".employhome">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/employment"
        android:textAlignment="center"
        android:background="#ff4081"
        android:textColor="#ffffff"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/takejob"
        android:onClick="emtake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/take_job"
        android:textAlignment="center"
        android:background="#ff4081"
        android:textColor="#FFFF00"
        android:textStyle="bold"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/givejob"
        android:onClick="emgive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@android:dimen/notification_large_icon_width"
        android:layout_marginLeft="@android:dimen/notification_large_icon_width"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/give_job"
        android:textAlignment="center"
        android:background="#ff4081"
        android:textColor="#FFFF00"
        android:textStyle="bold"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>